--- a/templates/legal.html
+++ b/templates/legal.html
@@ -1,95 +1,27 @@
-<!DOCTYPE html>
-<!-- Use the light bootstrap theme and set language to English -->
-<html data-bs-theme="light" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--
-    'width=device-width' sets the width of the viewport to match the device's screen width
-    'initial-scale=1.0' sets the initial zoom level of the page to 1 (default scale), stops mobiles zooming out or displaying a desktop layout
-    -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Legal - CS learning portal</title>
-    <!-- Manifest (PWA) json -->
-    <link rel="manifest" href="../static/manifest.json" />
-    <!-- Icon to fallback to if manifest is not supported by the browser -->
-    <link rel="icon" href="../static/icons/scalable.svg" />
-    <!-- External Bootstrap 5 CSS stylesheets -->
-    <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/assets/css/Footer-Basic-icons.css">
-</head>
+{% extends "base.html" %}
 
-<body>
-    <!-- Header Section -->
-    <header>
-        <div class="container-fluid" style="margin-bottom: 8px; margin-top: 8px;">
-            <!-- Button to toggle the offcanvas menu -->
-            <a class="d-flex justify-content-end" data-bs-target="#offcanvas-menu" data-bs-toggle="offcanvas">
-                <!-- SVG icon for the hamburger menu -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-list text-body" style="font-size: 48px;">
-                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
-                </svg>
-            </a>
-        </div>
-    </header>
+{% block title %}
+Legal - CS Learning Portal
+{% endblock %}
 
-    <!-- Main Content Section -->
+{% block content %}
+<!-- Main content section -->
+<section class="py-5 bg-light mb-4">
     <div class="container">
-        <!-- Page Title -->
-        <h1>Legal information</h1>
-        <!-- Description Paragraphs -->
-        <p>
+        <h2 class="display-6">Legal information</h2>
+    </div>
+</section>
+<div class="container">
+    <!-- Description Paragraphs -->
+    <p>
                 <span style="color: rgb(0, 0, 0);">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lectus ante, tristique eu dapibus id, suscipit molestie nisl. Nullam eget ligula sit amet odio porttitor laoreet. Donec porttitor elit quis urna porttitor, in scelerisque neque pretium. Quisque aliquam bibendum justo, non maximus lorem ornare sed. Nam ac turpis eu urna varius scelerisque. Aliquam malesuada fringilla felis, in luctus ante posuere sit amet. Curabitur pretium, odio non dapibus pharetra, ipsum leo tincidunt leo, non maximus purus urna at sem.&nbsp;
                 </span>
-        </p>
-        <p>
+    </p>
+    <p>
                 <span style="color: rgb(0, 0, 0);">
                     Morbi semper vel nibh id volutpat. Pellentesque fermentum pharetra orci sit amet molestie. Quisque accumsan at purus quis venenatis. Sed sodales finibus malesuada. Quisque luctus erat nisl, non dignissim diam gravida non. Etiam convallis feugiat mi. Vestibulum nec tincidunt elit. Praesent egestas lacus neque, et volutpat magna hendrerit vitae. Sed nec risus mauris. Integer ullamcorper bibendum nisi in lacinia.
                 </span>
-        </p>
-    </div>
-
-    <!-- Offcanvas Menu Section -->
-    <div class="offcanvas offcanvas-end d-lg-flex" tabindex="-1" id="offcanvas-menu" data-bs-theme="dark">
-        <div class="offcanvas-body d-flex flex-column justify-content-between pt-0">
-            <!-- Navigation Links -->
-            <div>
-                <hr class="mt-0">
-                <ul class="nav nav-pills flex-column mb-auto">
-                    <!-- Links to various sections/pages of the portal -->
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/index">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/how-to-use">How to use</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/about">About</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/news">CS in the news</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/learn-offline">Learn CS offline</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/feedback">Feedback</a></li>
-                    <li class="nav-item"><a class="nav-link link-body-emphasis" href="/legal">Legal info</a></li>
-                </ul>
-            </div>
-            <!-- User Account Section -->
-            <div>
-                <hr>
-                <div class="dropdown">
-                    <!-- User account dropdown toggle -->
-                    <a class="dropdown-toggle link-body-emphasis d-flex align-items-center text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" role="button">
-                        <!-- Placeholder for user profile image -->
-                        <img class="rounded-circle me-2" alt="" width="32" height="32" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="object-fit: cover;">
-                        <strong>My account</strong>&nbsp;
-                    </a>
-                    <!-- Dropdown menu -->
-                    <div class="dropdown-menu shadow text-small" data-popper-placement="top-start">
-                        <!-- Links for profile and sign out -->
-                        <a class="dropdown-item" href="/profile">Profile</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/sign-out">Sign out</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- External JavaScript -->
-    <script src="../static/assets/bootstrap/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+    </p>
+</div>
+{% endblock %}
