Update index link in offcanvas.html.

--- a/templates/partials/offcanvas.html
+++ b/templates/partials/offcanvas.html
@@ -4,7 +4,7 @@
         <div>
             <hr class="mt-0">
             <ul class="nav nav-pills flex-column mb-auto">
-                <li class="nav-item"><a class="nav-link link-body-emphasis" href="/index">Home</a></li>
+                <li class="nav-item"><a class="nav-link link-body-emphasis" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link link-body-emphasis" href="/how-to-use">How to use</a></li>
                 <li class="nav-item"><a class="nav-link link-body-emphasis" href="/about">About</a></li>
                 <li class="nav-item"><a class="nav-link link-body-emphasis" href="/news">CS in the news</a></li>
