--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ Home - CS Learning Portal
                 <input type="hidden" name="use_speech" id="useSpeech" value="false">
 
                 <!-- Input icons container -->
-                <div class="d-flex align-items-center gap-2 mt-2">
+                <div class="d-flex icon-bar gap-2 mt-2">
 
                     <!-- Search History -->
                     <a href="/history" class="link-secondary" title="View your search history" data-bs-toggle="tooltip">
@@ -55,18 +55,18 @@ Home - CS Learning Portal
 
             <!-- Learning search results -->
             {% if hyperlinked_learning_content %}
-            <div class="table-responsive">
-                <table class="table table-striped table-hover">
-                    <tbody>
-                    {% for key, value in hyperlinked_learning_content.items() %}  <!-- Loop through items -->
-                    <tr>
-                        <td>
-                            <a href="{{ value['url'] }}" target="_blank">{{ value['title'] }}</a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+            <h5 class="mt-4">Search results:</h5>
+            <div class="list-group">
+                <!-- Loop through items -->
+                {% for key, value in hyperlinked_learning_content.items() %}
+                <a href="{{ value['url'] }}" target="_blank" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                    <div class="ms-2 me-auto">
+                        <div class="fw-semibold">{{ value['title'] }}</div>
+                        <small class="text-muted">Click to open resource</small>
+                    </div>
+                    <span class="badge bg-primary rounded-pill">Open</span>
+                </a>
+                {% endfor %}
             </div>
             {% endif %}
         </div>
