--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -12,7 +12,7 @@
             <div class="d-flex flex-column">
                 <h2 class="mb-1">AI-powered GCSE Computer Science Learning Portal</h2>
                 <p class="mb-0">
-                    Search for GCSE learning material, get relevant news and offline material all in one place
+                    Search for GCSE learning material, get relevant news and offline material all in one place!
                 </p>
             </div>
         </div>
